久しぶりに開発、見直し

--- a/core.html
+++ b/core.html
@@ -6,15 +6,15 @@
 		<title>WWA Maker</title>
 	</head>
 	<body>
-		<nav id="wm_toolBar">
-			<div id="wm_toolBar_file">
-				<ul>
-					<li><button id="wm_toolBar_new">新規作成</button></li>
-					<li><button id="wm_toolBar_open">開く</button></li>
-					<li><button id="wm_toolBar_save">保存</button></li>
-				</ul>
-			</div>
-			<div id="wm_toolBar_edit">
+		<div id="wm_toolBar">
+			<nav id="wm_toolBar_file">
+					<ul>
+						<li><button id="wm_toolBar_new">新規作成</button></li>
+						<li><button id="wm_toolBar_open">開く</button></li>
+						<li><button id="wm_toolBar_save">保存</button></li>
+					</ul>
+			</nav>
+			<nav id="wm_toolBar_edit">
 				<ul>
 					<li><button id="wm_toolBar_putBack">背景設置</button></li>
 					<li><button id="wm_toolBar_putObj">物体設置</button></li>
@@ -23,8 +23,8 @@
 					<li><button id="wm_toolBar_delBacl">背景削除</button></li>
 					<li><button id="wm_toolBar_delObj">物体削除</button></li>
 				</ul>
-			</div>
-			<div id="wm_toolBar_view">
+			</nav>
+			<nav id="wm_toolBar_view">
 				<ul>
 					<li><button id="wm_toolBar_gridSmall">グリッド(マス)</button></li>
 					<li><button id="wm_toolBar_gridLarge">グリッド(画面)</button></li>
@@ -32,13 +32,19 @@
 					<li><button id="wm_toolBar_back">背景パーツウインドウ</button></li>
 					<li><button id="wm_toolBar_quickView">クイックビュー</button></li>
 				</ul>
-			</div>
-			<div id="wm_toolBar_setting">
+			</nav>
+			<nav id="wm_toolBar_setting">
 				<ul>
 					<li><button id="wm_toolBar_map">マップデータの設定</button></li>
 					<li><button id="wm_toolBar_config">環境設定</button></li>
 				</ul>
-			</div>
-		</nav>
+			</nav>
+		</div>
+		<div id="wm_map">
+		</div>
+		<div id="wm_parts">
+		</div>
+		<div id="wm_edit">
+		</div>
 	</body>
 </html>
