パーツ編集部分を追加

--- a/core.html
+++ b/core.html
@@ -41,10 +41,40 @@
 			</nav>
 		</div>
 		<div id="wm_map">
+
 		</div>
 		<div id="wm_parts">
+			
 		</div>
 		<div id="wm_edit">
+			<section id="wm_edit_Obj">
+				<h1>メッセージパーツ</h1>
+				<label for="wm_edit_Obj_type">パーツ種類</label>
+				<select id="wm_edit_Obj_type">
+					<option>通常物体</option>
+					<option>メッセージ</option>
+					<option>モンスター</option>
+					<option>アイテム</option>
+					<option>扉</option>
+					<option>物を売る</option>
+					<option>物を買う</option>
+					<option>二者択一</option>
+					<option>ランダム選択</option>
+					<option>スコア表示</option>
+					<option>URLゲート</option>
+					<option>ジャンプゲート</option>
+				</select>
+			</section>
+			<section id="wm_edit_Back">
+				<h1>道パーツ</h1>
+				<label for="wm_edit_Back_type">パーツ種類</label>
+				<select id="wm_edit_Back_type">
+					<option>道</option>
+					<option>壁</option>
+					<option>ジャンプゲート</option>
+					<option>URLゲート</option>
+				</select>
+			</section>
 		</div>
 	</body>
 </html>
