TypeScriptソース追加、ステータスバー追加、調整色々

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
 			</nav>
 		</div>
 		-->
+		<div id="wm_statusBar">
+			<ul>
+				<li><label>X:</label><input id="mouseX" type="text" size="4" readonly></li>
+				<li><label>Y:</label><input id="mouseY" type="text" size="4" readonly></li>
+				<li><label>物体パーツ:</label><input id="mouseObj" type="text" size="4" readonly></li>
+				<li><label>背景パーツ:</label><input id="mouseMap" type="text" size="4" readonly></li>
+			</ul>
+		</div>
 		<div id="wm_mainArea">
 			<div id="wm_map">
 				<!--ここにマップを載せる-->
