--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
 		-->
 		<div id="wm_statusBar">
 			<ul>
-				<li><label>X:</label><input id="mouseX" type="text" size="4" readonly></li>
-				<li><label>Y:</label><input id="mouseY" type="text" size="4" readonly></li>
-				<li><label>物体パーツ:</label><input id="mouseObj" type="text" size="4" readonly></li>
-				<li><label>背景パーツ:</label><input id="mouseMap" type="text" size="4" readonly></li>
+				<li><label>X:</label><input id="mouseX" class="readOnlyText" type="text" size="4" readonly></li>
+				<li><label>Y:</label><input id="mouseY" class="readOnlyText" type="text" size="4" readonly></li>
+				<li><label>物体:</label><input id="mouseObj" class="readOnlyText" type="text" size="5" readonly></li>
+				<li><label>背景:</label><input id="mouseMap" class="readOnlyText" type="text" size="5" readonly></li>
 			</ul>
 		</div>
 		<div id="wm_mainArea">
 			<div id="wm_map">
+				<canvas width="1000" height="1000">
 				<!--ここにマップを載せる-->
 				<!--現時点Canvasにするつもり-->
 			</div>
@@ -61,12 +62,14 @@
 					<section id="wm_parts_list_Obj">
 						<h1>物体パーツ</h1>
 						<canvas id="wm_parts_list_Obj_map" width="440" height="120"></canvas>
+						<label>選択パーツ:</label><input id="selectPartsObj" class="readOnlyText" type="text" size="5" readonly>
 						<button id="wm_parts_list_Obj_edit">パーツ編集</button>
 						<button id="wm_parts_list_Obj_remove">パーツ削除</button>
 					</section>
 					<section id="wm_parts_list_Back">
 						<h1>背景パーツ</h1>
 						<canvas id="wm_parts_list_Back_map" width="440" height="120"></canvas>
+						<label>選択パーツ:</label><input id="selectPartsMap" class="readOnlyText" type="text" size="5" readonly>
 						<button id="wm_parts_list_Back_edit">パーツ編集</button>
 						<button id="wm_parts_list_Back_remove">パーツ削除</button>
 					</section>
