script.jsをTypeScriptへ移行、ここから持ってきたデータを元に色々開発してみる

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="style.css">
-		<script charset="UTF-8" src="./script.js"></script>
+		<script charset="UTF-8" src="./wwamk.long.js"></script>
 		<title>WWA Maker</title>
 	</head>
 	<body>
-		<!--
 		<div id="wm_toolBar">
 			<nav id="wm_toolBar_file">
 					<ul>
@@ -42,7 +41,6 @@
 				</ul>
 			</nav>
 		</div>
-		-->
 		<div id="wm_statusBar">
 			<ul>
 				<li><label>X:</label><input id="mouseX" class="readOnlyText" type="text" size="4" readonly></li>
@@ -84,12 +82,13 @@
 							<option>モンスター</option>
 							<option>アイテム</option>
 							<option>扉</option>
+							<option>ステータス変化</option>
 							<option>物を売る</option>
 							<option>物を買う</option>
-							<option>二者択一</option>
-							<option>ランダム選択</option>
-							<option>スコア表示</option>
 							<option>URLゲート</option>
+							<option>スコア表示</option>
+							<option>ランダム選択</option>
+							<option>二者択一</option>
 							<option>ジャンプゲート</option>
 						</select>
 					</section>
