マップの読み込みを実装、for文の条件も見直しました

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</div>
 		<div id="wm_mainArea">
 			<div id="wm_map">
-				<canvas width="1000" height="1000">
+				<canvas id="wm_mapCanvas" width="1000" height="1000">
 				<!--ここにマップを載せる-->
 				<!--現時点Canvasにするつもり-->
 			</div>
