Vue.jsとwebpackを使ってみた、まだ動きません!!!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script charset="UTF-8" src="./wwamk.long.js"></script>
 		<title>WWA Maker</title>
 	</head>
-	<body>
+	<body id="wm">
 		<div id="wm_toolBar">
 			<nav id="wm_toolBar_file">
 					<ul>
